--- a/jc.html
+++ b/jc.html
@@ -3,5 +3,5 @@
 </center>
 <hr>
 <p>
-  ohn Felix Anthony Cena (/ˈsiːnə/ SEE-nə; born April 23, 1977)[10] is an American actor and professional wrestler. As a wrestler, he has been signed to WWE since 2001, but has performed part-time since 2018.[11][12] A record 16-time world champion as recognized by WWE,[b] he is regarded as one of the greatest professional wrestlers of all time.[13][14][15]
+  john Felix Anthony Cena (/ˈsiːnə/ SEE-nə; born April 23, 1977)[10] is an American actor and professional wrestler. As a wrestler, he has been signed to WWE since 2001, but has performed part-time since 2018.[11][12] A record 16-time world champion as recognized by WWE,[b] he is regarded as one of the greatest professional wrestlers of all time.[13][14][15]
 </p>
