--- a/jc.html
+++ b/jc.html
@@ -5,3 +5,6 @@
 <p>
   john Felix Anthony Cena (/ˈsiːnə/ SEE-nə; born April 23, 1977)[10] is an American actor and professional wrestler. As a wrestler, he has been signed to WWE since 2001, but has performed part-time since 2018.[11][12] A record 16-time world champion as recognized by WWE,[b] he is regarded as one of the greatest professional wrestlers of all time.[13][14][15]
 </p>
+<p>
+  Cena has held the WWE Championship a record 13 times and the World Heavyweight Championship three times. He is also a five-time WWE United States Champion, a two-time WWE Tag Team Champion, a two-time World Tag Team Champion, a two-time Royal Rumble winner, and a one-time Money in the Bank winner. He has headlined multiple major WWE pay-per-views, including five times headlining its flagship event WrestleMania. His career has been met with mixed critical and audience reception, with praise for his character work and promotional skills but criticism for his perceived over-representation and on-screen dominance relative to other wrestlers.[21
+</p>
